fixing content wall alignment.
I'm not sure how this got broken in the last commit.

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -72,7 +72,7 @@ footer{
     padding-right: 2%;
     padding-bottom: 10px;
     column-gap: 2%;
-    margin-left: auto;
+    margin: auto;
     padding-block-end: 30px;
 }
 .contentBrick {
